--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,11 @@
     "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
-   "engines": {
-    "node": "14.17.0",
-    "npm": "6.14.13"
-  },
+   "engines":
+ {
+    "node": "14.16.1", 
+     "npm": "6.14.12"
+ }
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
