--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,19 +5,20 @@
   "private": true,
   "dependencies": {
     "@paypal/react-paypal-js": "^7.8.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+     "@testing-library/jest-dom": "^5.11.5",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "mailgun-js": "^0.22.0",
-    "react": "17.0.2",
+        "react": "^17.0.1",
     "react-bootstrap": "^2.6.0",
-    "react-dom": "^18.2.0",
+        "react-dom": "^17.0.1",
     "react-helmet-async": "^1.3.0",
+    "react-paypal-js": "^0.0.1-security",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+        "react-scripts": "4.0.0",
     "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
