--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@mui/base": "^5.0.0-alpha.105",
+    "@mui/icons-material": "^5.10.9",
     "@paypal/react-paypal-js": "^7.8.1",
-    "@react-google-maps/api": "^2.17.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,7 +17,6 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
-    "react-google-charts": "^4.0.0",
     "react-helmet-async": "^1.3.0",
     "react-paypal-js": "^0.0.1-security",
     "react-router-bootstrap": "^0.26.2",
