--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "digitalshop",
   "version": "1.0.0",
+  "engines": {
+    "node": "18.12.1"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
