--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "digitalshop",
   "version": "1.0.0",
   "engines": {
-    "node": "18.12.1"
+    "node": "18.12.1",
+    "npm": "8.19.2"
   },
   "description": "",
   "main": "index.js",
