--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+        "use-reducer-logger": "^1.0.2",
+
     "web-vitals": "^2.1.4"
   },
   "scripts": {
