--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,21 +5,27 @@
   "private": true,
   "dependencies": {
     "@paypal/react-paypal-js": "^7.8.1",
+    "@react-google-maps/api": "^2.17.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "cloudinary": "^1.32.0",
+    "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
     "react-helmet-async": "^1.3.0",
     "react-paypal-js": "^0.0.1-security",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "streamifier": "^0.1.1",
     "use-reducer-logger": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
